--- a/day_1/Cargo.toml
+++ b/day_1/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "advent_of_code_2020_rust"
+name = "day_1"
 version = "0.1.0"
-authors = ["ben"]
+authors = ["Ben Crisman <benjamin.crisman@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
